[tool.poetry]
name = "poetry add pandas==2-2-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry add pandas==2"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
pandas = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
